daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N26_bad_leak_value/h1.hex
a3023b117d4d2438ba781318e64bd374cfb9d19c4bc3bba110f61fac0dc61e176c906171829ca26187f2fdbbe1b774021a98e63b2416b5ecc22e12fa1e0d5272
